almost completed home page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="assets/css/header.css">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
+
     <title>Document</title>
 </head>
 <body>
@@ -22,18 +24,29 @@
         </section>
     </header>
 
+    <section class="commonSections"> 
+        <h1>Who we are?</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum iusto, iure omnis numquam delectus eveniet culpa accusamus molestias quia sunt. Nisi unde eveniet odit, non nobis, amet suscipit expedita laborum quod et voluptates illo aliquid consequuntur nulla neque consequatur? Commodi, tempore sequi! Cumque eum in amet nam unde molestiae quas?</p>
+    </section>
+    <section class="commonSections">
+        <h1>What we do?</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla voluptatum non eligendi nobis eius sunt delectus repudiandae officiis molestiae odit, dicta repellat accusantium nesciunt est accusamus nemo alias, quibusdam aliquid.</p>
+    </section>
     <main>
+
         <section class="model">
             <h1>Check yout crop health</h1>
             <form >
                 <input type="file" placeholder="upload crop picture">
                 <br>
-                <input type="submit" placeholder="Detect">
+                <input  class="submitButtons" type="submit" value="Detect">
             </form>
         </section>
     </main>
     <footer>
-
+        <h3>contact us</h3>
+        <a href="https://www.linkedin.com/in/shiva-chauhan-051275240/"><img src="assets/css/linkedinLogo.png" alt="linkedin"></a>
+        <a href="https://twitter.com/Shivachuahan17"><img src="assets/css/twitterLogo.jpeg  " alt="twitter"></a>
     </footer>
 </body>
 </html>
