--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="#">Menu</a>
             <a href="#">Home</a>
-            <a href="#">News</a>
+            <a href="assets/newsPage/newsPage.html">News</a>
         </nav>
         <section>
             <a class="donate">DONATE</a>
