made header responsive

--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
 <body>
     <header>
         <img src="assets/img/logo.webp" class="logo">
-        <nav>
-            <a href="#">Menu</a>
+        <nav class="navbar">
+            <a href="#">Monitor</a>
             <a href="#">Home</a>
             <a href="assets/newsPage/newsPage.html">News</a>
+            <a id="donate">DONATE</a>
         </nav>
-        <section>
-            <a class="donate">DONATE</a>
-            <br>
-            <p>your every penny will go to the farmers wellfare</p>
-        </section>
+        
     </header>
+    <input type="checkbox" id="toggle">
+    <label for="toggle"  class="openmenu">Menu</label>
+    <ul class="menubar">
+        <li><a href="#">Monitor</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="assets/newsPage/newsPage.html">News</a></li>
+    </ul>
 
     <section class="commonSections"> 
         <h1>Who we are?</h1>
