made main page responsive

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main>
 
         <section class="model">
-            <h1>Check yout crop health</h1>
+            <h1>Check your crop health</h1>
             <form >
                 <input type="file" placeholder="upload crop picture">
                 <br>
