made newpage fully responsive and added new monitor page

--- a/assets/newsPage/newsPage.html
+++ b/assets/newsPage/newsPage.html
@@ -8,9 +8,10 @@
 </head>
 <body id="body">
     <header>
-        <a>HOME</a>
+        <a href="../../index.html">HOME</a>
     </header>
     <br>
+    <h1>Latest daily news...</h1>
     <main>
         <section  class="first-row1">
             <img id="img1" src="#" alt="fetching....">
