--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header>
         <img src="assets/img/logo.webp" class="logo">
         <nav class="navbar">
-            <a href="#">Monitor</a>
-            <a href="#">Home</a>
+            <a href="assets/monitor/monitor.html">Monitor</a>
+            <a href="#">cure Instruction</a>
             <a href="assets/newsPage/newsPage.html">News</a>
             <a id="donate">DONATE</a>
         </nav>
