made some interface for the comments functionality

--- a/assets/monitor/monitor.html
+++ b/assets/monitor/monitor.html
@@ -11,15 +11,17 @@
         <a href="../../index.html">HOME</a>
     </header>
     <h1>Crop growth till now</h1>
-    <img alt="cropGrowthGraph">
-    <span><h2>Desease Recovery : </h2> <h2></h2></span>
+    <img class="monitor-img" alt="cropGrowthGraph" src="../img/dummy_monitor_img.png">
     <section class="public-section">
-        <section>
-            <section>
-                <img alt="person-profile">
+       <h1>comments:</h1>
+        <section class="person-comment">
+            <section class="one-piece">
+                <img src="../img/dummy_person_dp.jpeg" alt="person-profile">
             </section>
+            <section class="second-piece">
             <h2>person name</h2>
             <p>person comment </p>
+        </section>
         </section>
     </section>
 </body>
