--- a/assets/monitor/monitor.html
+++ b/assets/monitor/monitor.html
@@ -14,14 +14,12 @@
     <img class="monitor-img" alt="cropGrowthGraph" src="../img/dummy_monitor_img.png">
     <section class="public-section">
        <h1>comments:</h1>
-        <section class="person-comment">
-            <section class="one-piece">
-                <img src="../img/dummy_person_dp.jpeg" alt="person-profile">
-            </section>
+        <section class="person-comment clearfix">
+            <img src="../img/dummy_person_dp.jpeg" alt="person-profile">
             <section class="second-piece">
-            <h2>person name</h2>
-            <p>person comment </p>
-        </section>
+                <h2>person name</h2>
+                <p>person comment </p>
+            </section>
         </section>
     </section>
 </body>
