completed node server

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <input type="checkbox" id="toggle">
     <label for="toggle"  class="openmenu">Menu</label>
     <ul class="menubar">
-        <li><a href="#">Monitor</a></li>
+        <li><a href="assets/monitor/monitor.html">Monitor</a></li>
         <li><a href="#">Home</a></li>
         <li><a href="assets/newsPage/newsPage.html">News</a></li>
     </ul>
